--- a/lessons/ObjectOrientedProgramming/JupyterNotebooks/1.OOP_syntax_shirt_practice/shirt_exercise.ipynb
+++ b/lessons/ObjectOrientedProgramming/JupyterNotebooks/1.OOP_syntax_shirt_practice/shirt_exercise.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,26 @@
     "#    - store the object in a variable called shirt_one\n",
     "#\n",
     "#\n",
-    "###"
+    "###\n",
+    "\n",
+    "shirt_one = Shirt('red','S','long-sleeve','25')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "10\n",
+      "8.8\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO:\n",
     "#     - print the price of the shirt using the price attribute\n",
@@ -72,12 +84,21 @@
     "#     - print the price of the shirt using the price attribute\n",
     "#     - use the discount method to print the price of the shirt with a 12% discount\n",
     "#\n",
-    "###"
+    "###\n",
+    "\n",
+    "print(shirt_one.price)\n",
+    "\n",
+    "shirt_one.change_price(10)\n",
+    "\n",
+    "print(shirt_one.price)\n",
+    "\n",
+    "print(shirt_one.discount(0.12))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,28 +108,50 @@
     "# .       - color orange, size L, style short-sleeve, and price 10\n",
     "#    - store the object in a variable called shirt_two\n",
     "#\n",
-    "###"
+    "###\n",
+    "\n",
+    "shirt_two = Shirt('orange','L','short-sleeve',10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO:\n",
     "#\n",
     "#    - calculate the total cost of shirt_one and shirt_two\n",
     "#    - store the results in a variable called total\n",
     "#    \n",
-    "###"
+    "###\n",
+    "\n",
+    "total = shirt_one.price + shirt_two.price\n",
+    "\n",
+    "print(total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.0\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO:\n",
     "#\n",
@@ -116,7 +159,10 @@
     "#       shirt_one has a discount of 14% and shirt_two has a discount\n",
     "#       of 6%\n",
     "#    - store the results in a variable called total_discount\n",
-    "###"
+    "###\n",
+    "total_discount = shirt_one.discount(0.14)+shirt_two.discount(0.06)\n",
+    "\n",
+    "print(total_discount)"
    ]
   },
   {
@@ -139,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +194,18 @@
     "\n",
     "run_tests(shirt_one, shirt_two, total, total_discount)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +219,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
