finish OOP interaction between classes

--- a/lessons/ObjectOrientedProgramming/JupyterNotebooks/3.OOP_code_gaussian_class/gaussian_code_exercise.ipynb
+++ b/lessons/ObjectOrientedProgramming/JupyterNotebooks/3.OOP_code_gaussian_class/gaussian_code_exercise.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "        \n",
     "        self.mean = mu\n",
     "        self.stdev = sigma\n",
-    "        self.data = []\n",
+    "        self.data_list = []\n",
     "\n",
     "\n",
     "    \n",
@@ -49,14 +49,12 @@
     "            float: mean of the data set\n",
     "    \n",
     "        \"\"\"\n",
+    "        mean = sum(self.data_list)/len(self.data_list)\n",
     "        \n",
-    "        #TODO: Calculate the mean of the data set. Remember that the data set is stored in self.data\n",
-    "        # Change the value of the mean attribute to be the mean of the data set\n",
-    "        # Return the mean of the data set           \n",
-    "        pass\n",
-    "                \n",
+    "        self.mean = mean\n",
     "\n",
-    "\n",
+    "        return  mean\n",
+    "                 \n",
     "    def calculate_stdev(self, sample=True):\n",
     "\n",
     "        \"\"\"Method to calculate the standard deviation of the data set.\n",
@@ -69,17 +67,21 @@
     "    \n",
     "        \"\"\"\n",
     "\n",
-    "        # TODO:\n",
-    "        #   Calculate the standard deviation of the data set\n",
-    "        #   \n",
-    "        #   The sample variable determines if the data set contains a sample or a population\n",
-    "        #   If sample = True, this means the data is a sample. \n",
-    "        #   Keep the value of sample in mind for calculating the standard deviation\n",
-    "        #\n",
-    "        #   Make sure to update self.stdev and return the standard deviation as well    \n",
-    "            \n",
-    "        pass\n",
-    "        \n",
+    "        if sample: \n",
+    "            n = len(self.data_list)-1 \n",
+    "        else:\n",
+    "            n = len(self.data_list)\n",
+    "\n",
+    "        mean = self.mean\n",
+    "        sd = 0\n",
+    "\n",
+    "        for i in self.data_list:\n",
+    "            sd += (i - mean)**2\n",
+    "\n",
+    "        sd = math.sqrt(sd/n)\n",
+    "        self.stdev = sd\n",
+    "        return self.stdev\n",
+    "\n",
     "\n",
     "    def read_data_file(self, file_name, sample=True):\n",
     "    \n",
@@ -95,7 +97,6 @@
     "        \n",
     "        \"\"\"\n",
     "        \n",
-    "        # This code opens a data file and appends the data to a list called data_list\n",
     "        with open(file_name) as file:\n",
     "            data_list = []\n",
     "            line = file.readline()\n",
@@ -103,14 +104,11 @@
     "                data_list.append(int(line))\n",
     "                line = file.readline()\n",
     "        file.close()\n",
-    "    \n",
-    "        # TODO: \n",
-    "        #   Update the self.data attribute with the data_list\n",
-    "        #   Update self.mean with the mean of the data_list. \n",
-    "        #       You can use the calculate_mean() method with self.calculate_mean()\n",
-    "        #   Update self.stdev with the standard deviation of the data_list. Use the \n",
-    "        #       calculate_stdev() method.\n",
-    "                \n",
+    "\n",
+    "        self.data_list = data_list\n",
+    "        self.mean = self.calculate_mean()\n",
+    "        self.stdev = self.calculate_stdev()\n",
+    "\n",
     "        \n",
     "    def plot_histogram(self):\n",
     "        \"\"\"Method to output a histogram of the instance variable data using \n",
@@ -123,9 +121,12 @@
     "            None\n",
     "        \"\"\"\n",
     "        \n",
-    "        # TODO: Plot a histogram of the data_list using the matplotlib package.\n",
-    "        #       Be sure to label the x and y axes and also give the chart a title\n",
-    "        \n",
+    "        fig = plt.figure()\n",
+    "        plt.hist(x=self.data_list)\n",
+    "        plt.title('Histogram of the data')\n",
+    "        plt.xlabel('Value')\n",
+    "        plt.ylabel('interval')\n",
+    "        plt.show()\n",
     "                \n",
     "        \n",
     "    def pdf(self, x):\n",
@@ -139,9 +140,9 @@
     "            float: probability density function output\n",
     "        \"\"\"\n",
     "        \n",
-    "        # TODO: Calculate the probability density function of the Gaussian distribution\n",
-    "        #       at the value x. You'll need to use self.stdev and self.mean to do the calculation\n",
-    "        pass        \n",
+    "        return (1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2)\n",
+    "\n",
+    "        \n",
     "\n",
     "    def plot_histogram_pdf(self, n_spaces = 50):\n",
     "\n",
@@ -162,8 +163,8 @@
     "        mu = self.mean\n",
     "        sigma = self.stdev\n",
     "\n",
-    "        min_range = min(self.data)\n",
-    "        max_range = max(self.data)\n",
+    "        min_range = min(self.data_list)\n",
+    "        max_range = max(self.data_list)\n",
     "        \n",
     "         # calculates the interval between x values\n",
     "        interval = 1.0 * (max_range - min_range) / n_spaces\n",
@@ -180,7 +181,7 @@
     "        # make the plots\n",
     "        fig, axes = plt.subplots(2,sharex=True)\n",
     "        fig.subplots_adjust(hspace=.5)\n",
-    "        axes[0].hist(self.data, density=True)\n",
+    "        axes[0].hist(self.data_list, density=True)\n",
     "        axes[0].set_title('Normed Histogram of Data')\n",
     "        axes[0].set_ylabel('Density')\n",
     "\n",
@@ -197,6 +198,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "...F\n",
+      "======================================================================\n",
+      "FAIL: test_stdevcalculation (__main__.TestGaussianClass)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/2c/ftb5blb955vg1y_ch6hdt1_h0000gn/T/ipykernel_5535/3243065733.py\", line 26, in test_stdevcalculation\n",
+      "    self.assertEqual(round(self.gaussian.stdev, 2), 88.55, 'population standard deviation incorrect')\n",
+      "AssertionError: 92.87 != 88.55 : population standard deviation incorrect\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.004s\n",
+      "\n",
+      "FAILED (failures=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=1>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Unit tests to check your solution\n",
     "\n",
@@ -217,7 +255,7 @@
     "    def test_meancalculation(self):\n",
     "        self.gaussian.read_data_file('numbers.txt', True)\n",
     "        self.assertEqual(self.gaussian.calculate_mean(),\\\n",
-    "         sum(self.gaussian.data) / float(len(self.gaussian.data)), 'calculated mean not as expected')\n",
+    "         sum(self.gaussian.data_list) / float(len(self.gaussian.data_list)), 'calculated mean not as expected')\n",
     "\n",
     "    def test_stdevcalculation(self):\n",
     "        self.gaussian.read_data_file('numbers.txt', True)\n",
@@ -231,11 +269,63 @@
     "\n",
     "unittest.TextTestRunner().run(tests_loaded)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Gaussian(25,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.read_data_file('numbers.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.55245445543926"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.calculate_stdev(sample=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +339,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
