fix sd bug and finish magic method assignment

--- a/lessons/ObjectOrientedProgramming/JupyterNotebooks/3.OOP_code_gaussian_class/gaussian_code_exercise.ipynb
+++ b/lessons/ObjectOrientedProgramming/JupyterNotebooks/3.OOP_code_gaussian_class/gaussian_code_exercise.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
     "\n",
     "        self.data_list = data_list\n",
     "        self.mean = self.calculate_mean()\n",
-    "        self.stdev = self.calculate_stdev()\n",
+    "        self.stdev = self.calculate_stdev(sample=sample)\n",
     "\n",
     "        \n",
     "    def plot_histogram(self):\n",
@@ -202,35 +202,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...F\n",
-      "======================================================================\n",
-      "FAIL: test_stdevcalculation (__main__.TestGaussianClass)\n",
+      "....\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/var/folders/2c/ftb5blb955vg1y_ch6hdt1_h0000gn/T/ipykernel_5535/3243065733.py\", line 26, in test_stdevcalculation\n",
-      "    self.assertEqual(round(self.gaussian.stdev, 2), 88.55, 'population standard deviation incorrect')\n",
-      "AssertionError: 92.87 != 88.55 : population standard deviation incorrect\n",
+      "Ran 4 tests in 0.002s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.004s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=4 errors=0 failures=1>"
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,44 +260,6 @@
     "tests_loaded = unittest.TestLoader().loadTestsFromModule(tests)\n",
     "\n",
     "unittest.TextTestRunner().run(tests_loaded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Gaussian(25,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.read_data_file('numbers.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "88.55245445543926"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.calculate_stdev(sample=False)"
    ]
   },
   {
