--- a/lessons/ObjectOrientedProgramming/JupyterNotebooks/4.OOP_code_magic_methods/magic_methods.ipynb
+++ b/lessons/ObjectOrientedProgramming/JupyterNotebooks/4.OOP_code_magic_methods/magic_methods.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,12 @@
     "        \n",
     "        #TODO: Calculate the mean of the data set. Remember that the data set is stored in self.data\n",
     "        # Change the value of the mean attribute to be the mean of the data set\n",
-    "        # Return the mean of the data set           \n",
-    "        pass\n",
+    "        # Return the mean of the data set\n",
+    "        mean = sum(self.data)/len(self.data)\n",
+    "\n",
+    "        self.mean = mean\n",
+    "\n",
+    "        return self.mean\n",
     "                \n",
     "\n",
     "\n",
@@ -77,8 +81,19 @@
     "        #   Keep the value of sample in mind for calculating the standard deviation\n",
     "        #\n",
     "        #   Make sure to update self.stdev and return the standard deviation as well    \n",
-    "            \n",
-    "        pass\n",
+    "        \n",
+    "        if sample:\n",
+    "            n = len(self.data)-1\n",
+    "        else:\n",
+    "            n = len(self.data)\n",
+    "        sd = 0\n",
+    "        for d in self.data:\n",
+    "            sd += (d-self.mean)**2/n\n",
+    "        sd = math.sqrt(sd)\n",
+    "    \n",
+    "        self.stdev = sd    \n",
+    "        \n",
+    "        return self.stdev\n",
     "        \n",
     "\n",
     "    def read_data_file(self, file_name, sample=True):\n",
@@ -110,6 +125,9 @@
     "        #       You can use the calculate_mean() method with self.calculate_mean()\n",
     "        #   Update self.stdev with the standard deviation of the data_list. Use the \n",
     "        #       calculate_stdev() method.\n",
+    "        self.data = data_list\n",
+    "        self.mean = self.calculate_mean()\n",
+    "        self.stdev = self.calculate_stdev(sample=sample)\n",
     "                \n",
     "        \n",
     "    def plot_histogram(self):\n",
@@ -125,6 +143,11 @@
     "        \n",
     "        # TODO: Plot a histogram of the data_list using the matplotlib package.\n",
     "        #       Be sure to label the x and y axes and also give the chart a title\n",
+    "\n",
+    "        plt.hist(self.data)\n",
+    "        plt.title('Histogram of Data')\n",
+    "        plt.xlabel('data')\n",
+    "        plt.ylabel('count')\n",
     "        \n",
     "                \n",
     "        \n",
@@ -141,7 +164,8 @@
     "        \n",
     "        # TODO: Calculate the probability density function of the Gaussian distribution\n",
     "        #       at the value x. You'll need to use self.stdev and self.mean to do the calculation\n",
-    "        pass        \n",
+    "\n",
+    "        return (1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2)        \n",
     "\n",
     "    def plot_histogram_pdf(self, n_spaces = 50):\n",
     "\n",
@@ -214,8 +238,8 @@
     "        result = Gaussian()\n",
     "        \n",
     "        # TODO: calculate the mean and standard deviation of the sum of two Gaussians\n",
-    "        result.mean = 5 # change this line to calculate the mean of the sum of two Gaussian distributions\n",
-    "        result.stdev = 2 # change this line to calculate the standard deviation of the sum of two Gaussian distributions\n",
+    "        result.mean = self.mean + other.mean\n",
+    "        result.stdev = math.sqrt(self.stdev**2 + other.stdev**2)\n",
     "        \n",
     "        return result\n",
     "\n",
@@ -237,65 +261,55 @@
     "        # and standard_deviation_value is the standard deviation of\n",
     "        # the Gaussian.\n",
     "        # For example \"mean 3.5, standard deviation 1.3\"\n",
-    "        \n",
-    "        pass"
+    "        return \"mean {}, standard deviation {}\".format(self.mean,self.stdev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92.87459776004906"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Gaussian()\n",
+    "a.read_data_file('numbers.txt')\n",
+    "\n",
+    "a.stdev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "F.EE.F\n",
-      "======================================================================\n",
-      "ERROR: test_meancalculation (__main__.TestGaussianClass)\n",
+      "......\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-3-09732a143793>\", line 18, in test_meancalculation\n",
-      "    self.assertEqual(self.gaussian.calculate_mean(),         sum(self.gaussian.data) / float(len(self.gaussian.data)), 'calculated mean not as expected')\n",
-      "ZeroDivisionError: float division by zero\n",
+      "Ran 6 tests in 0.005s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_pdf (__main__.TestGaussianClass)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-3-09732a143793>\", line 14, in test_pdf\n",
-      "    self.assertEqual(round(self.gaussian.pdf(25), 5), 0.19947,         'pdf function does not give expected result')\n",
-      "TypeError: type NoneType doesn't define __round__ method\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_add (__main__.TestGaussianClass)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-3-09732a143793>\", line 31, in test_add\n",
-      "    self.assertEqual(gaussian_sum.mean, 55)\n",
-      "AssertionError: 5 != 55\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_stdevcalculation (__main__.TestGaussianClass)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-3-09732a143793>\", line 22, in test_stdevcalculation\n",
-      "    self.assertEqual(round(self.gaussian.stdev, 2), 92.87, 'sample standard deviation incorrect')\n",
-      "AssertionError: 2 != 92.87 : sample standard deviation incorrect\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.015s\n",
-      "\n",
-      "FAILED (failures=2, errors=2)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=6 errors=2 failures=2>"
+       "<unittest.runner.TextTestResult run=6 errors=0 failures=0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +386,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
