finish inheritance assignment

--- a/lessons/ObjectOrientedProgramming/JupyterNotebooks/5.OOP_code_inheritance_clothing/inheritance_exercise_clothing.ipynb
+++ b/lessons/ObjectOrientedProgramming/JupyterNotebooks/5.OOP_code_inheritance_clothing/inheritance_exercise_clothing.ipynb
@@ -59,8 +59,14 @@
     "#\n",
     "#   methods: triple_price, which has no inputs and returns three times\n",
     "#     the price of the blouse\n",
-    "#\n",
-    "#\n",
+    "\n",
+    "class Blouse(Clothing):\n",
+    "    def __init__ (self, color, size, style, price, country_of_origin):\n",
+    "        Clothing.__init__(self, color, size, style, price)\n",
+    "        self.country_of_origin = country_of_origin\n",
+    "    \n",
+    "    def triple_price(self):\n",
+    "        return self.price * 3\n",
     "\n",
     "# TODO: Add a method to the clothing class called calculate_shipping.\n",
     "#   The method has two inputs: weight and rate. Weight is a float\n",
