--- a/lessons/ObjectOrientedProgramming/JupyterNotebooks/5.OOP_code_inheritance_clothing/inheritance_exercise_clothing.ipynb
+++ b/lessons/ObjectOrientedProgramming/JupyterNotebooks/5.OOP_code_inheritance_clothing/inheritance_exercise_clothing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,11 @@
     "        \n",
     "    def calculate_discount(self, discount):\n",
     "        return self.price * (1 - discount)\n",
+    "\n",
+    "    # additional method\n",
+    "    def calculate_shipping(self,weight, rate):\n",
+    "        return weight*rate\n",
+    "        \n",
     "        \n",
     "class Shirt(Clothing):\n",
     "    \n",
@@ -68,6 +73,7 @@
     "    def triple_price(self):\n",
     "        return self.price * 3\n",
     "\n",
+    "\n",
     "# TODO: Add a method to the clothing class called calculate_shipping.\n",
     "#   The method has two inputs: weight and rate. Weight is a float\n",
     "#   representing the weight of the article of clothing. Rate is a float\n",
@@ -76,9 +82,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Unit tests to check your solution\n",
     "\n",
@@ -113,11 +141,18 @@
     "\n",
     "unittest.TextTestRunner().run(tests_loaded)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +166,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
